Fix issue with profile pic on ios

--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -63,8 +63,13 @@
 .circularPhoto {
 	// margin-left: auto;
 	// img {
+	z-index: 10;
 	border-radius: 50%;
-		
+	-webkit-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    -khtml-border-radius: 50%;
 	// }
 	flex-grow: 0;
 	width: 200px;
